# cingulater

./: .brownie_repomix.md  .gitignore  .rooignore  README.md  README_JP.md  analysis_report.md  brownie_core_mcp_config.json  check_comment.py  config.yaml  core_mcp_config.json  direct_execution_test.py  docker-compose.yml  gateway_mcp_config.json  mcp_config.json  pyproject.toml  pyrightconfig.json  repomix-output.md  repomix-output.xml  run_and_verify.sh
.agent/rules/: behavior.md  common.md
.agent/scripts/: hygiene_check.py
.agent/workflows/: blueprint.md  cleanup.md  trace.md
.agents/rules/: rule.md
.agents/scripts/: agent_analyzer.py  circular_check.py  hygiene_check.py  launcher.js  monitor.js  trace_coroutine.py
.agents/skills/: ANALYZE.MD
.agents/workflows/: analysis.md  env_check.md  project_analysis.md
.brwn/workflows/: daily_todo_scan.yaml  node_extract.md  node_report.md  scheduled_hello.md  scheduled_hello.yaml
config/: config.yaml  magicvalues.yaml
docs/: ai_doc_normalized.md  architecture.md  architecture_v2.md  detailed_analysis_results.md  security_fortification_plan.md  user_manual.md
docs/analysis/: AGENT_REPORT_20260420_042720.md
scratch/: brownie_tool_bridge.py  retrigger_task.py  run_workflow_demo.py  solve_stale.py  test_meta_agent.py  test_robust_llm.py  test_workflow_manual.py  verify_fix_logic.py
scripts/: analyze_all.py
src/: gh_platform_client.py  main.py  version.py
src/api/: schema.py  server.py
src/core/: agent.py  base.py  config.py  default_plugins.py  interceptors.py  knowledge_base.py  llm_client.py  mcp_server_manager.py  orchestrator.py  persistence.py  plugin_specs.py  resource_manager.py  router.py  sandbox_manager.py  schema.py  state_manager.py  trigger_manager.py  types.py  watchdog.py  worker_pool.py  workflow_manager.py
src_backups/: main.py
tests/: conftest.py  repro_mcp.py  repro_mcp_cmd.py  repro_mcp_fix.py  repro_mcp_lifecycle.py  repro_mcp_str.py  test_e2e_mcp.py  test_flow_networkx.py  test_integration_execution.py  test_integration_mentions.py  test_main.py  test_sandbox_tools.py
workflows/: api_analysis.md  api_analysis.yaml  coder.yaml  completion.md  completion.yaml  events_routing.yaml  governance.md  governance.yaml  handshake.md  handshake.yaml  intent_alignment.yaml  interlocutor.yaml  interpreter.yaml  knowledge_extractor.md  knowledge_extractor.yaml  node_analyze.md  node_decide_tools.md  node_draft_reply.md  planner.yaml  reasoner.yaml  security_audit.md  security_audit.yaml  sync_wiki.md  sync_wiki.yaml  writer.md  writer.yaml
(+81 files in other folders)
