[project]
name = "brownie"
version = "0.2.0"
description = "Minimal Conversational Core"
authors = [
    { name = "Satoshi Tanaka", email = "satoshi@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings[yaml]>=2.2.0",
    "loguru>=0.7.2",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"
