[project]
name = "brownie"
version = "0.2.1"
description = "Autonomous AI Coding Agent core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API Server & Core
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings[yaml]>=2.2.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    # CLI Interface
    "requests>=2.33.1",
    "prompt-toolkit>=3.0.52",
    "rich>=13.0.0",
    "typer>=0.12.3",
    # MCP
    "mcp>=1.1.0",
    "mcp-routing-gateway",
    "smolagents>=1.24.0",
    "openai>=2.33.0",
]

[project.scripts]
brwn = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[tool.uv.sources]
mcp-routing-gateway = { git = "https://github.com/globalpocket/mcp-routing-gateway.git" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
